--- a/single4.html
+++ b/single4.html
@@ -99,19 +99,19 @@
                     <h3>Electricidad en los Seres Vivos</h3>
                     <p style="text-align: justify;">Los organismos vivos, incluidos los humanos, dependen de señales eléctricas para controlar funciones vitales como el movimiento, los sentidos, e incluso los pensamientos. Aquí te dejo algunos ejemplos de cómo la electricidad está presente en tu vida diaria.</p>
                     <p style="text-align: justify;">Los organismos vivos, incluidos los humanos, dependen de señales eléctricas para controlar funciones vitales como el movimiento, los sentidos, e incluso los pensamientos. Aquí te dejo algunos ejemplos de cómo la electricidad está presente en tu vida diaria.</p>
-                  <center>  <img style="centro" height="315" src="img/R.jpeg"></center> 
+                  <center>  <embed width="560" height="315" src="img/R.jpeg"></center> 
                     <h3>Comunicación Nerviosa</h3>
                     <p style="text-align: justify;">Uno de los ejemplos más comunes de electricidad en los seres vivos es el funcionamiento del sistema nervioso. El cerebro y los nervios utilizan señales eléctricas llamadas potenciales de acción para enviar información rápidamente por todo el cuerpo.</p>
                     <p style="text-align: justify;">Ejemplo cotidiano: Cuando tocas una superficie caliente, los receptores en tu piel generan una señal eléctrica que viaja a través de las neuronas hacia tu cerebro, indicándole que debes retirar la mano. Esto ocurre en fracciones de segundo gracias a la velocidad con la que se transmiten estas señales eléctricas a través de las fibras nerviosas.</p>
-                   <center> <img style="centro" height="315" src="img/E.jpeg"></center> 
+                   <center> <embed width="560" height="315" src="img/E.jpeg"></center> 
                     <h3>Latido del Corazón</h3>
                     <p style="text-align: justify-all;">El corazón funciona gracias a impulsos eléctricos generados por un grupo de células especializadas en el nodo sinoauricular. Este marcapasos natural genera impulsos que permiten que las células musculares del corazón se contraigan de manera coordinada, manteniendo un latido constante.</p>
                     <p>Ejemplo cotidiano: Los médicos monitorean esta actividad eléctrica con un electrocardiograma (ECG), que mide las señales eléctricas del corazón para asegurarse de que esté funcionando correctamente. Si el corazón no genera estas señales adecuadamente, se puede implantar un marcapasos artificial que regula las señales eléctricas necesarias.</p>
-                   <center> <img style="centro" height="315" src="img/Q.jpeg"></center> 
+                   <center> <embed width="560" height="315" src="img/Q.jpeg"></center> 
                     <h3>Músculos y Movimiento</h3>
                     <p>Los músculos también dependen de la electricidad para funcionar. Cuando decides mover un brazo o caminar, tu cerebro envía una señal eléctrica a través de los nervios, lo que desencadena la contracción muscular.</p>
                     <p>Ejemplo cotidiano: Cada vez que practicas deporte o haces ejercicio, estás utilizando la electricidad en tu cuerpo para coordinar el movimiento de tus músculos. Si alguna vez has experimentado un calambre, eso ocurre cuando hay una desregulación en las señales eléctricas que controlan las contracciones musculares.</p>
-                   <center>  <img style="centro" height="315" src="img/W.jpeg"></center> 
+                   <center>  <embed width="560" height="315" src="img/W.jpeg"></center> 
                     <h3>Sentidos</h3>
                     <p>Tus cinco sentidos (vista, oído, olfato, gusto y tacto) también dependen de señales eléctricas. Por ejemplo, las células de la retina en los ojos convierten la luz en señales eléctricas que viajan al cerebro y te permiten ver. El oído transforma las ondas sonoras en impulsos eléctricos, permitiéndote escuchar.</p>
                     <p>Ejemplo cotidiano: Cuando escuchas música o ves una película, tu cerebro está procesando señales eléctricas que provienen de tus ojos y oídos. Sin estas señales, la percepción del mundo que te rodea sería imposible.</p>
@@ -153,19 +153,19 @@
                     <p>Una de las aplicaciones más comunes de la electricidad en la química es el funcionamiento de las baterías y pilas. Las baterías utilizan reacciones químicas para generar electricidad a través de un proceso llamado reacción redox (reducción-oxidación). En este proceso, una sustancia pierde electrones (oxidación) mientras que otra los gana (reducción), y este flujo de electrones genera electricidad.</p>
 
                     <p>Ejemplo cotidiano: Tu teléfono móvil, el mando a distancia o incluso el coche eléctrico dependen de las baterías para funcionar. Estas baterías convierten la energía química en energía eléctrica que luego alimenta el dispositivo. Sin el desarrollo de la electroquímica, no tendríamos acceso a muchas de las tecnologías portátiles que usamos hoy en día.</p>
-                  <center> <img style="centro" height="315" src="img/pila.jpg"></center>
+                  <center> <embed width="560" height="315" src="img/pila.jpg"></center>
                     <h3>Galvanoplastia y Recubrimientos Metálicos</h3>
                     <p>El proceso de galvanoplastia utiliza la electricidad para recubrir un objeto con una capa de metal. Durante este proceso, una corriente eléctrica hace que los iones metálicos se depositen sobre la superficie del objeto, creando una capa uniforme de metal. Este proceso se usa tanto para fines decorativos como industriales.</p>
                     <p>Ejemplo cotidiano: Muchos objetos de uso diario, como joyas, monedas o utensilios, tienen una capa protectora o decorativa de metal aplicada mediante la galvanoplastia. Incluso los electrodomésticos o piezas de automóviles a menudo están recubiertos de metal para aumentar su durabilidad y resistencia a la corrosión.</p>
-                    <center><img style="centro" height="315" src="img/galno.jpg"></center>
+                    <center><embed width="560" height="315" src="img/galno.jpg"></center>
                     <h3>Celdas de Combustible</h3>
                     <p>Las celdas de combustible son dispositivos electroquímicos que convierten la energía química en electricidad. A diferencia de las baterías, las celdas de combustible no se agotan y pueden generar electricidad de forma continua mientras tengan un suministro de combustible. El hidrógeno es uno de los combustibles más utilizados en este tipo de tecnología.</p>
                     <p>Ejemplo cotidiano: Las celdas de combustible se están utilizando cada vez más en vehículos eléctricos y también en fuentes de energía portátiles. Estos dispositivos son especialmente importantes porque ofrecen una alternativa más ecológica a las formas tradicionales de energía, ya que el único subproducto de las celdas de combustible de hidrógeno es el agua.</p>
-                    <center><img style="centro" height="315" src="img/celda.jpeg"></iframe></center>
+                    <center> <embed width="560" height="315" src="img/celda.jpeg"></iframe></center>
                     <h3>Electrodomésticos y Reacciones Químicas</h3>
                     <p>En la cocina, usamos electricidad para facilitar o acelerar reacciones químicas. Un horno eléctrico o una estufa convierten la energía eléctrica en calor, lo que permite que ocurran diversas reacciones químicas, como la caramelización o la reacción de Maillard, que le da a los alimentos su sabor y color característicos.</p>
                     <p>Ejemplo cotidiano: Cuando horneas un pastel o preparas carne en la parrilla eléctrica, la electricidad está provocando cambios químicos en los ingredientes. La electricidad transforma las moléculas de los alimentos, alterando sus estructuras y produciendo nuevos compuestos que generan sabores, texturas y colores únicos.</p>
-                   <center> <img style="centro" height="315" src="img/OIP.jpeg"></iframe></center>
+                   <center> <embed width="560" height="315" src="img/OIP.jpeg"></iframe></center>
                     <h3>Desalación del Agua</h3>
                     <p>En algunas regiones, la electricidad se utiliza en procesos químicos como la desalación para obtener agua potable a partir de agua salada. La electrodiálisis es una técnica que utiliza una corriente eléctrica para separar las sales del agua, lo que permite obtener agua dulce de forma eficiente.</p>
                     <p>Ejemplo cotidiano: En muchos países donde el agua dulce es escasa, se utilizan tecnologías de electrólisis para desalinizar el agua de mar y convertirla en agua potable. Este proceso electroquímico es esencial para garantizar el suministro de agua en regiones secas o costeras.</p>
@@ -200,30 +200,30 @@
 <div id="fisica" style="display:none;">
     <h1><center>Física</center></h1>
     <p style="text-align: justify-all;">La electricidad es uno de los fenómenos físicos más importantes en la vida cotidiana. Su estudio en física se centra en las propiedades y el comportamiento de las cargas eléctricas y cómo éstas interactúan. Aquí te explico más a fondo algunos conceptos importantes y su relación con el día a día.</p>
-                   <center> <img style="centro" height="315" src="img/Y.jpeg"></center> 
+                   <center> <embed width="560" height="315" src="img/Y.jpeg"></center> 
                     <h3>Carga Eléctrica y Corriente Eléctrica</h3>
                     <p>La carga eléctrica es una propiedad intrínseca de las partículas subatómicas, como protones (carga positiva) y electrones (carga negativa). Las interacciones entre estas cargas son responsables de muchos fenómenos eléctricos. En casa, cuando se genera electricidad estática (por ejemplo, al frotar un globo contra el cabello), estás observando el comportamiento de las cargas eléctricas.</p>
                     <p>La corriente eléctrica, que es el flujo de electrones a través de un conductor, es la base de cualquier aparato que utilizamos. Ya sea cargar tu teléfono o encender una bombilla, todo depende del flujo controlado de electricidad. La corriente se mide en amperios (A) y es esencial para todo tipo de dispositivos, desde pequeños aparatos hasta grandes máquinas industriales.</p>
-                  <center>  <img style="centro" height="315" src="img/U.jpeg"></center> 
+                  <center>  <embed width="560" height="315" src="img/U.jpeg"></center> 
                     <h3>Circuitos Eléctricos</h3>
                     <p>Los circuitos eléctricos son un camino cerrado a través del cual la corriente fluye. En tu casa, todo está conectado a través de circuitos: las luces, los enchufes, los electrodomésticos. Un circuito básico consta de una fuente de voltaje (como una batería), un conductor (cables) y un dispositivo que usa la corriente (como una bombilla). Los interruptores permiten controlar cuándo fluye la corriente y cuándo no.</p>
-                   <center> <img style="centro" height="315" src="img/P.jpg"></center> 
+                   <center> <embed width="560" height="315" src="img/P.jpg"></center> 
                     <h3>Ley de Ohm</h3>
                     <p>La ley de Ohm es uno de los principios más importantes en la electricidad. Establece que el voltaje (𝑉) en un circuito es igual a la corriente (I) multiplicada por la resistencia (𝑅) del circuito:V=IR</p>
                    <p style="text-align: justify;">En la vida cotidiana, esto significa que si aumentas el voltaje en un dispositivo (como una lámpara) o disminuyes la resistencia (como el grosor de los cables), la corriente que pasa por el circuito cambiará, afectando su funcionamiento. Por ejemplo, un mal cableado puede aumentar la resistencia y hacer que un dispositivo no funcione correctamente.</p>
-                  <center> <img  height="315" src="img/L.png"></center> 
+                  <center> <embed width="560" height="315" src="img/L.png"></center> 
                   <br>
                    <h3>Electromagnetismo y Motores Eléctricos</h3>
                     <p>El electromagnetismo describe cómo una corriente eléctrica puede generar un campo magnético y viceversa. Esto se ve todos los días en el funcionamiento de motores eléctricos. En casa, muchos aparatos tienen motores que funcionan gracias a este fenómeno, como la licuadora, el ventilador o incluso el cepillo de dientes eléctrico.</p>
                     <p>Cuando una corriente pasa a través de una bobina, genera un campo magnético que puede hacer girar un rotor en un motor, lo que permite convertir la electricidad en movimiento. Esta conversión es la base de la tecnología moderna.</p>
-                  <center>  <img style="centro" height="315" src="img/B.jpeg"></center> 
+                  <center>  <embed width="560" height="315" src="img/B.jpeg"></center> 
                     <h3>Fuerza Eléctrica y Campo Eléctrico</h3>
                     <p>La fuerza eléctrica entre dos cargas es proporcional a sus magnitudes y se mide según la ley de Coulomb. En la vida cotidiana, si acercas dos globos cargados con electricidad estática, sentirás cómo se repelen o atraen, dependiendo de la naturaleza de sus cargas.</p>
                     <p>Un campo eléctrico es la región que rodea a una carga eléctrica, dentro de la cual otras cargas experimentan una fuerza. Los campos eléctricos son esenciales en dispositivos como los televisores antiguos y las fotocopiadoras, que utilizan la electricidad para generar imágenes o mover partículas.</p>
-                   <center> <img style="centro" height="315" src="img/Ñ.jpeg"></center> 
+                   <center> <embed width="560" height="315" src="img/Ñ.jpeg"></center> 
                     <h3>Potencia Eléctrica</h3>
                     <p>La potencia eléctrica es la velocidad a la que se consume o genera energía en un circuito. Se mide en vatios (W), y es clave en la eficiencia de los electrodomésticos. Por ejemplo, una lámpara de 60 W consume menos electricidad que una de 100 W, lo que influye en el costo de la energía eléctrica en tu hogar.</p>
-                     <center><img height="315" src="img/V.jpeg"></center>
+                     <center><embed width="560" height="315" src="img/V.jpeg"></center>
 
                    <center> <iframe width="100%" height="315" src="https://www.youtube.com/embed/videoID" title="Video Física"></iframe></center> 
                     <p>En la Semana de la Ciencia, exploramos cómo los principios físicos impactan nuestra vida diaria. Un ejemplo fascinante de la física en acción es la bobina de Tesla , un dispositivo que convierte energía eléctrica en campos electromagnéticos y produce descargas eléctricas espectaculares. Este invento, desarrollado por Nikola Tesla en 1891, demuestra la capacidad de manipular la energía de alta frecuencia para generar voltajes extremadamente altos, un fenómeno que no solo tiene aplicaciones prácticas, sino que también es una muestra del poder de la ciencia.</p>
