--- a/single1.html
+++ b/single1.html
@@ -205,7 +205,7 @@ Se observa el resultado de la descomposición del peróxido de hidrógeno, facil
   </br>Aunque este experimento se haga mayormente con materiales químicos bastante peligrosos también los materiales cotidianos pueden dar lugar a interesantes reacciones químicas cuando se combinan de manera adecuada.<br>
  Al realizar el experimento de la "oruga negra", un aspecto positivo es que es una forma divertida y visualmente impresionante de aprender sobre reacciones químicas, descomposición y combustión. Además, es una actividad segura si se siguen las precauciones adecuadas, utilizando materiales fácilmente accesibles como el azúcar, bicarbonato y alcohol, También fomenta la experimentación científica en un entorno controlado.</br>
 
-</p><h2><b>seguridad  al realizar  el experimento:</b></h2></br><p><li>Área ventilada: Realiza el experimento en un lugar bien ventilado para evitar la acumulación de gases.</li> 
+</p><h2><b>Seguridad  al realizar  el experimento</b></h2></br><p><li>Área ventilada: Realiza el experimento en un lugar bien ventilado para evitar la acumulación de gases.</li> 
 
 	<li>Protección personal: Usa guantes y gafas de protección para evitar quemaduras o salpicaduras.</li> 
 
@@ -259,7 +259,7 @@ Aunque el CO₂ por sí mismo no produce calor, su formación es una consecuenci
  <b><h2>Composición del Experimento</b></h2>
 <b>1. Reactivos:</b><br></br>
 
-<li><B>Alcohol (por ejemplo, etanol): </B> utilizado como disolvente o reactivo.<br></br>
+<B>Alcohol (por ejemplo, etanol): </B> utilizado como disolvente o reactivo.<br></br>
 
 
 <b>Bicarbonato de sodio (NaHCO₃):</b> Un compuesto que puede actuar como un agente leudante y que reacciona con ácidos.
@@ -287,7 +287,8 @@ Si se calienta la mezcla, el bicarbonato de sodio puede descomponerse en carbona
 
 
 
-<B>2(NaHCO3)~(Na2CO3)+H2O+CO2</B><BR></BR>
+<p>2 NaHCO<sub>3</sub> &rarr; Na<sub>2</sub>CO<sub>3</sub> + H<sub>2</sub>O + CO<sub>2</sub></p>
+<BR></BR>
 <b>3. Caramelización del Azúcar:</b>
 
 Si la mezcla se calienta lo suficiente, el azúcar puede comenzar a caramelizarse, lo que produce un color marrón y una textura diferente. Esto puede agregar un efecto visual atractivo y un aroma dulce al experimento.
