--- a/single1.html
+++ b/single1.html
@@ -377,8 +377,12 @@ La fuerza de acción del cuerpo 1 sobre el cuerpo 2 es igual a la fuerza de reac
 <li>Interaccion: Acción que se ejerce recíprocamente entre dos o más objetos, personas, agentes, fuerzas, funciones, etcétera.</li><p><h3><b>Ejemplo de la vida cotidiana</b></h3></p>Cuando estamos en un columpio y alguien nos empuja, esa persona experimenta una fuerza que lo empuja hacia atrás; si no está bien apoyado puede caer por el impulso.
 <center>
 <h2>Demostración e las Leyes de Newton</h2>
-<video class="img-fluid rounded w-50 float-left mr-4 mb-3" controls>
+
 <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/0HAF9nC_LyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
+
+	<center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/0HAF9nC_LyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </center>
 
