--- a/single4.html
+++ b/single4.html
@@ -67,7 +67,9 @@
     <!-- Header Start -->
     <div class="container-fluid bg-primary mb-5">
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-            <h3 class="display-3 font-weight-bold text-white">Energía, reacciones y vida</h3>
+            <h3 class="display-3 font-weight-bold text-white">Electricidad, reacciones y vida</h3>
+            <p style="text-align: justify-all;">La electricidad es un fenómeno que ha cautivado la curiosidad humana desde los albores de la ciencia moderna. Es fundamental para la comprensión de muchos procesos naturales y tecnológicos.</p>
+            <p style="text-align: justify-all;">A lo largo de esta página, exploraremos cómo la electricidad se manifiesta en estas tres áreas fundamentales de la ciencia y cómo influye en nuestras vidas cotidianas.</p>
             <div class="d-inline-flex text-white">
             </div>
         </div>
@@ -255,6 +257,7 @@
             document.getElementById(section).style.display = 'block';
         }
     </script>
+    <a href="index.html" class="nav-item nav-link">Home</a>
 </body>
 
 </html>
