--- a/single4.html
+++ b/single4.html
@@ -68,8 +68,8 @@
     <div class="container-fluid bg-primary mb-5">
         <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
             <h3 class="display-3 font-weight-bold text-white">Electricidad, reacciones y vida</h3>
-            <p style="text-align: justify-all;" bgcolor="white">La electricidad es un fenómeno que ha cautivado la curiosidad humana desde los albores de la ciencia moderna. Es fundamental para la comprensión de muchos procesos naturales y tecnológicos.</p>
-            <p style="text-align: justify-all;" bgcolor="white">A lo largo de esta página, exploraremos cómo la electricidad se manifiesta en estas tres áreas fundamentales de la ciencia y cómo influye en nuestras vidas cotidianas.</p>
+            <p style="text-align: justify-all;"> <font color="white">La electricidad es un fenómeno que ha cautivado la curiosidad humana desde los albores de la ciencia moderna. Es fundamental para la comprensión de muchos procesos naturales y tecnológicos.</p>
+            <p style="text-align: justify-all;"> A lo largo de esta página, exploraremos cómo la electricidad se manifiesta en estas tres áreas fundamentales de la ciencia y cómo influye en nuestras vidas cotidianas.</p></font>
             <div class="d-inline-flex text-white">
             </div>
         </div>
@@ -257,14 +257,7 @@
             document.getElementById(section).style.display = 'block';
         }
     </script>
-    <footer><div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="single.html" class="nav-item nav-link">11°D</a>
-                    <a href="single2.html" class="nav-item nav-link">11°E</a>
-                    <a href="single3.html" class="nav-item nav-link">11°F</a>
-                    <a href="single4.html" class="nav-item nav-link">11°G</a>
-                    <a href="single5.html" class="nav-item nav-link">11°H</a>
-    </footer>
+    
 </body>
 
 </html>
