--- a/single4.html
+++ b/single4.html
@@ -227,7 +227,7 @@
                     <p>La potencia eléctrica es la velocidad a la que se consume o genera energía en un circuito. Se mide en vatios (W), y es clave en la eficiencia de los electrodomésticos. Por ejemplo, una lámpara de 60 W consume menos electricidad que una de 100 W, lo que influye en el costo de la energía eléctrica en tu hogar.</p>
                      <center><img width="560" height="315" src="img/V.jpeg"></center>
 
-                   <center> <iframe width="100%" height="315" src="https://www.youtube.com/embed/videoID" title="Video Física"></iframe></center> 
+                   <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/BKWmFvpHO5U?si=EbrUiPYuIWbFds_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe></center> 
                     <p>En la Semana de la Ciencia, exploramos cómo los principios físicos impactan nuestra vida diaria. Un ejemplo fascinante de la física en acción es la bobina de Tesla , un dispositivo que convierte energía eléctrica en campos electromagnéticos y produce descargas eléctricas espectaculares. Este invento, desarrollado por Nikola Tesla en 1891, demuestra la capacidad de manipular la energía de alta frecuencia para generar voltajes extremadamente altos, un fenómeno que no solo tiene aplicaciones prácticas, sino que también es una muestra del poder de la ciencia.</p>
                     <h3>Objetivos del proyecto</h3>
                     <p>Demostrar cómo se generan y manipulan campos eléctricos y magnéticos.<br>
